# openai-compatible-gateway

./: .env.example  README.md  config.py  main.py  pyproject.toml
routers/: chat.py
schemas/: openai.py
services/: upstream.py
tests/: conftest.py  test_chat_router.py  test_converters.py  test_prompt_injector.py  test_upstream.py
utils/: converters.py  prompt_injector.py
