[project]
name = "openai-compatible-gateway"
version = "1.0.0"
description = "OpenAI-compatible gateway adapter for a configured upstream chat API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.136.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
]

[dependency-groups]
dev = ["pytest==9.0.3", "pytest-asyncio==1.3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
